--- a/projeto_web/src/resources/html/adicionarBairro.html
+++ b/projeto_web/src/resources/html/adicionarBairro.html
@@ -40,7 +40,7 @@
 
         async function criarBairro() {
             const URL = `/api/bairros`;
-            const dadosCampeonato = {
+            const dadosBairro = {
                                        'id_cid': textoidCidade.value,
                                        'nome': textoNome.value
                                    };
